testsuite/tests/rename/should_fail/T5657.hs
module T5657 where

foo = [LT..GT]
