testsuite/tests/rename/should_fail/T5657.stderr

T5657.hs:3:8: error:
    Not in scope: ‘LT..’
    NB: no module named ‘LT’ is imported.

T5657.hs:3:8: error:
    A section must be enclosed in parentheses thus: (LT.. GT)
